fix: add model footer on small screens (#2349)

--- a/src/pages/AddModel/_add-model.scss
+++ b/src/pages/AddModel/_add-model.scss
@@ -1,8 +1,9 @@
 .add-model {
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  height: 100svh;
   position: fixed;
+  top: 0;
   width: -webkit-fill-available;
   width: stretch;
 
@@ -11,12 +12,14 @@
     flex: 1 1 auto;
     flex-direction: column;
     min-height: 0;
-    overflow-y: auto;
-    padding: 0 $sph--large;
+    overflow: hidden;
   }
 
   &__step {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
+    min-height: 0;
+    overflow-y: auto;
+    padding: 0 $sph--large;
 
     .stepper-horizontal {
       margin-bottom: $spv--large;
@@ -30,20 +33,27 @@
   }
 
   &__footer {
+    align-items: flex-end;
     background-color: white;
     border-top: 1px solid $color-mid-x-light;
-    bottom: 0;
-    padding: $spv--large $sph--small 0;
-    position: sticky;
-    text-align: right;
+    box-shadow: $box-shadow;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: end;
+    padding: $spv--large;
     // To ensure the footer appears above StackList items.
     z-index: z("gamma");
 
     .navigation-buttons {
       border-left: 1px solid $color-mid-light;
       border-right: 1px solid $color-mid-light;
+      display: flex;
       margin-right: $sph--large;
-      padding: $spv--small $sph--large;
+      padding: 0 $sph--large;
+
+      @include mobile {
+        padding: 0;
+      }
     }
 
     @include mobile {
